Fix preview pane on mobile
Not rendering correctly on safari mobile

--- a/css/cardSearch.css
+++ b/css/cardSearch.css
@@ -174,6 +174,13 @@ button.btn-primary {
 
 @media(max-width: 825px) {
   .cs-card-preview-pane {
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
     display: grid;
   }
 }
